# knowhere

./: CMakeLists.txt
docs/: PLUGIN_DEVELOPMENT.md
examples/: build_and_test_plugin.sh  plugin_loading_explained.md  test_plugin_system.cc
examples/minimal_plugin_test/: build.sh  loader.cc  plugin.cc
examples/simple_plugin_demo/: load_plugin_demo.cc
examples/simple_vector_plugin/: CMakeLists.txt
examples/simple_vector_plugin/src/: plugin_export.cc  simple_vector_index.h
include/knowhere/comp/: thread_pool.h
include/knowhere/plugin/: plugin_factory.h  plugin_interface.h  plugin_loader.h
knowhere/index/vector_index/: IndexDiskANN.h
src/common/: factory.cc
src/index/diskann/: diskann.cc
src/index/hnsw/: hnsw.cc
tests/ut/: CMakeLists.txt  test_search.cc
unittest/: CMakeLists.txt  test_diskann.cpp
